alignment issues fixed

--- a/_sass/pages/_property-list-item.scss
+++ b/_sass/pages/_property-list-item.scss
@@ -133,6 +133,9 @@
             padding: 4px;
           }
         }
+        td:nth-child(4),td:nth-child(5){
+          text-align: right;
+        }
       }
     }
 
